--- a/tokenizer_xm/draft for package examples.ipynb
+++ b/tokenizer_xm/draft for package examples.ipynb
@@ -36,46 +36,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/xiaoma/anaconda3/lib/python3.7/site-packages/sklearn/feature_extraction/image.py:167: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  dtype=np.int):\n",
-      "/Users/xiaoma/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/least_angle.py:30: DeprecationWarning: `np.float` is a deprecated alias for the builtin `float`. To silence this warning, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  method='lar', copy_X=True, eps=np.finfo(np.float).eps,\n",
-      "/Users/xiaoma/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/least_angle.py:167: DeprecationWarning: `np.float` is a deprecated alias for the builtin `float`. To silence this warning, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  method='lar', copy_X=True, eps=np.finfo(np.float).eps,\n",
-      "/Users/xiaoma/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/least_angle.py:284: DeprecationWarning: `np.float` is a deprecated alias for the builtin `float`. To silence this warning, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  eps=np.finfo(np.float).eps, copy_Gram=True, verbose=0,\n",
-      "/Users/xiaoma/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/least_angle.py:862: DeprecationWarning: `np.float` is a deprecated alias for the builtin `float`. To silence this warning, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  eps=np.finfo(np.float).eps, copy_X=True, fit_path=True,\n",
-      "/Users/xiaoma/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/least_angle.py:1101: DeprecationWarning: `np.float` is a deprecated alias for the builtin `float`. To silence this warning, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  eps=np.finfo(np.float).eps, copy_X=True, fit_path=True,\n",
-      "/Users/xiaoma/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/least_angle.py:1127: DeprecationWarning: `np.float` is a deprecated alias for the builtin `float`. To silence this warning, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  eps=np.finfo(np.float).eps, positive=False):\n",
-      "/Users/xiaoma/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/least_angle.py:1362: DeprecationWarning: `np.float` is a deprecated alias for the builtin `float`. To silence this warning, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  max_n_alphas=1000, n_jobs=None, eps=np.finfo(np.float).eps,\n",
-      "/Users/xiaoma/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/least_angle.py:1602: DeprecationWarning: `np.float` is a deprecated alias for the builtin `float`. To silence this warning, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  max_n_alphas=1000, n_jobs=None, eps=np.finfo(np.float).eps,\n",
-      "/Users/xiaoma/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/least_angle.py:1738: DeprecationWarning: `np.float` is a deprecated alias for the builtin `float`. To silence this warning, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  eps=np.finfo(np.float).eps, copy_X=True, positive=False):\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tokenizer_xm import TextPreProcessor\n",
     "import string\n",
@@ -86,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -122,68 +85,35 @@
     "\n",
     "print(\"Simple Preprocessed:\")\n",
     "print(\"---\")\n",
-    "tk = TextPreProcessor(text = example_text, lemma_flag= False, stem_flag = False, stopwords = [])\n",
-    "print(tk.txt_pre_pros())\n",
+    "tk = TextPreProcessor(text=example_text, lemma_flag=False, stem_flag=False, stopwords=[])\n",
+    "print(tk.process())\n",
     "print(\"---\")\n",
     "\n",
     "print(\"Pre-processing with regular contractions (e.g. I've -> I have):\")\n",
     "# In this package, I included a dictionary of regular contractions for your convenience\n",
-    "tk = TextPreProcessor(text = example_text, lemma_flag= False, stem_flag = False, \\\n",
-    "                      stopwords=[])\n",
-    "print(tk.txt_pre_pros())\n",
+    "tk = TextPreProcessor(text=example_text, lemma_flag=False, stem_flag=False, \\\n",
+    "                      contractions=[], stopwords=[])\n",
+    "print(tk.process())\n",
     "print(\"---\")\n",
     "\n",
     "print(\"Pre-processing with lemmatization:\")\n",
-    "tk = TextPreProcessor(text = example_text, lemma_flag= True, stem_flag = False, \\\n",
+    "tk = TextPreProcessor(text=example_text, lemma_flag=True, stem_flag=False, \\\n",
     "                      stopwords=[])\n",
-    "print(tk.txt_pre_pros())\n",
+    "print(tk.process())\n",
     "print(\"---\")\n",
     "\n",
     "print(\"Pre-processing with lemmatization and stemming:\")\n",
     "# This package uses the SnowballStemmer from ntlk.stem. I will try to make it customizable later\n",
-    "tk = TextPreProcessor(text = example_text, lemma_flag= True, stem_flag = True, \\\n",
+    "tk = TextPreProcessor(text=example_text, lemma_flag=True, stem_flag=True, \\\n",
     "                       stopwords=[])\n",
-    "print(tk.txt_pre_pros())\n",
+    "print(tk.process())\n",
     "print(\"---\")\n",
     "\n",
     "print(\"Adding stop words\")\n",
     "# This package uses the SnowballStemmer from ntlk.stem. I will try to make it customizable later\n",
-    "tk = TextPreProcessor(text = example_text, lemma_flag= True, stem_flag = True, \\\n",
+    "tk = TextPreProcessor(text=example_text, lemma_flag=True, stem_flag=True, \\\n",
     "                        stopwords=[\"this\",'be',\"an\",'it'])\n",
-    "print(tk.txt_pre_pros())\n",
-    "print(\"---\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Processing a list of text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'text_tokenizer_xm' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-401c2b1464e5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mtext_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'I am ready'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"This is great\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"I love it\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m tk = text_tokenizer_xm(text = text_list, lemma_flag= True, stem_flag = True, \\\n\u001b[0m\u001b[1;32m      3\u001b[0m                        contractions = contractions, stopwords=[])\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Use the .txt_pre_pros_all method instead when the input is a corpus\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtxt_pre_pros_all\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'text_tokenizer_xm' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "text_list = ['I am ready',\"This is great\",\"I love it\"]\n",
-    "tk = text_tokenizer_xm(text = text_list, lemma_flag= True, stem_flag = True, \\\n",
-    "                       contractions = contractions, stopwords=[])\n",
-    "# Use the .txt_pre_pros_all method instead when the input is a corpus\n",
-    "print(tk.txt_pre_pros_all())\n",
+    "print(tk.process())\n",
     "print(\"---\")"
    ]
   },
@@ -207,9 +137,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['products', 'production']\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Example\n",
@@ -217,34 +155,50 @@
     "\n",
     "text = \"products, production, is\"\n",
     "stop_words = ['product','is']\n",
-    "tk = text_tokenizer_xm(text = text, lemma_flag= False, stem_flag = False, \\\n",
-    "                       contractions = contractions, stopwords=stop_words)\n",
+    "tk = TextPreProcessor(text = text, lemma_flag= False, stem_flag = False, \\\n",
+    "                       stopwords=stop_words)\n",
     "# Use the .txt_pre_pros_all method instead when the input is a corpus\n",
-    "print(tk.txt_pre_pros())"
+    "print(tk.process())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['production', 'be']\n"
+     ]
+    }
+   ],
    "source": [
-    "tk = text_tokenizer_xm(text = text, lemma_flag= True, stem_flag = False, \\\n",
-    "                       contractions = contractions, stopwords=stop_words)\n",
+    "tk = TextPreProcessor(text = text, lemma_flag= True, stem_flag = False, \\\n",
+    "                       stopwords=stop_words)\n",
     "# Use the .txt_pre_pros_all method instead when the input is a corpus\n",
-    "print(tk.txt_pre_pros())"
+    "print(tk.process())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['be']\n"
+     ]
+    }
+   ],
    "source": [
-    "tk = text_tokenizer_xm(text = text, lemma_flag= True, stem_flag = True, \\\n",
-    "                       contractions = contractions, stopwords=stop_words)\n",
+    "tk = TextPreProcessor(text = text, lemma_flag= True, stem_flag = True, \\\n",
+    "                       stopwords=stop_words)\n",
     "# Use the .txt_pre_pros_all method instead when the input is a corpus\n",
-    "print(tk.txt_pre_pros())"
+    "print(tk.process())"
    ]
   }
  ],
